--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-typescript": "^2.13.6",
     "merge-stream": "^1.0.0"
   },
   "author": "Vlad Minaev <minaev@haulmont.com>",
