--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,7 @@
   "main": "cuba-app.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
-    "jquery": "^3.1.0",
-    "polymer-ts": "^0.1.28"
+    "jquery": "^3.1.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
