--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,11 @@
 {
   "name": "cuba-app",
   "version": "0.0.2",
-  "main": "cuba-app.html",
+  "main": [
+    "cuba-app.html",
+    "cuba-data-loading-behavior.html",
+    "cuba-form-behavior.html"
+  ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
     "jquery": "^3.1.0"
