--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.7.0",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "rxjs": "Reactive-Extensions/rxjs#^4.1.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
