--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,9 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.7.0",
-    "jquery": "^3.1.0",
-    "rxjs": "Reactive-Extensions/rxjs#^4.1.0"
+    "promise-polyfill": "polymerlabs/promise-polyfill#^1.0.0",
+    "rxjs": "Reactive-Extensions/rxjs#^4.1.0",
+    "fetch": "github/fetch#^2.0.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
