--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "url": "git@git.haulmont.com:platform-web-components/cuba-app.git"
   },
   "devDependencies": {
+    "@types/es6-promise": "0.0.32",
+    "@types/whatwg-fetch": "0.0.33",
     "gulp": "^3.9.1",
-    "gulp-typescript": "^2.13.6",
-    "merge-stream": "^1.0.0"
+    "gulp-typescript": "^3.1.3",
+    "merge-stream": "^1.0.0",
+    "rx": "^4.1.0",
+    "typescript": "^2.1.4"
   },
   "author": "Vlad Minaev <minaev@haulmont.com>",
   "license": "Apache-2.0"
