--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.7.0",
     "promise-polyfill": "polymerlabs/promise-polyfill#^1.0.0",
-    "rxjs": "Reactive-Extensions/rxjs#^4.1.0",
-    "fetch": "github/fetch#^2.0.1"
+    "rxjs": "Reactive-Extensions/rxjs#^4.1.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
