--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.1.3",
     "merge-stream": "^1.0.0",
-    "typescript": "^2.1.4"
+    "typescript": "2.1.4"
   },
   "author": "Vlad Minaev <minaev@haulmont.com>",
   "license": "Apache-2.0"
