--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,28 @@
 {
   "name": "cuba-app",
-  "version": "0.2.0",
   "main": [
     "cuba-app.html"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.7.0",
+    "polymer": "Polymer/polymer#1.9 - 2",
     "cuba-js-sdk": "git@git.haulmont.com:platform-web-components/cuba-js-sdk.git"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
+    "web-component-tester": "^6.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
+  },
+  "variants": {
+    "1.x": {
+      "dependencies": {
+        "polymer": "Polymer/polymer#^1.9",
+        "cuba-js-sdk": "git@git.haulmont.com:platform-web-components/cuba-js-sdk.git"
+      },
+      "devDependencies": {
+        "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+        "web-component-tester": "^4.0.0",
+        "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+      }
+    }
   }
 }
